Feat/60 refactor user and appointment tests